--- a/Timeout-Based/Timeout.html
+++ b/Timeout-Based/Timeout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div id="box" style="color: red; width: 50px; height: 50px"></div>
+<div id="box" style="background-color: red; width: 50px; height: 50px"></div>
 <p>Click the division, and it will say "Hello!" to you, and then "How are you?" 2 seconds later.</p>
 
 <script type="text/javascript" src="Timeout.js"></script>
