--- a/Date-Based/Date.html
+++ b/Date-Based/Date.html
@@ -2,7 +2,11 @@
 <html>
 <body>
 <div id="box" style="background-color: red; width: 50px; height: 50px"></div>
-<p>Click the division, and it will say "Hello!" to you, and then "How are you?" 2 seconds later.</p>
+<p>Click the division, and it will say "Hello!" to you, and then "How are you?" t milliseconds later, where t is the number you enter below.</p>
+<form id="delayInput">
+  <input type="text" name="delay">
+</form>
+<button id="submit">Update</button>
 
 <script type="text/javascript" src="Date.js"></script>
 </body>
